Fix: ganti placeholder images dengan Unsplash URLs, tambah background fallback untuk hero dan gallery

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="https://via.placeholder.com/480x520?text=Engineer+Team" alt="Tim profesional sondir" />
+            <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=500&h=600&fit=crop" alt="Tim profesional sondir engineer" />
           </div>
         </div>
       </section>
@@ -118,22 +118,22 @@
           <h2>Galeri Proyek</h2>
           <div class="gallery-grid">
             <div class="gallery-item">
-              <img src="https://via.placeholder.com/300x250?text=Proyek+1" alt="Proyek sondir 1" />
+              <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=400&h=300&fit=crop" alt="Proyek sondir 1" />
             </div>
             <div class="gallery-item">
-              <img src="https://via.placeholder.com/300x250?text=Proyek+2" alt="Proyek sondir 2" />
+              <img src="https://images.unsplash.com/photo-1581092335281-6fea7e0b2d4a?w=400&h=300&fit=crop" alt="Proyek sondir 2" />
             </div>
             <div class="gallery-item">
-              <img src="https://via.placeholder.com/300x250?text=Proyek+3" alt="Proyek sondir 3" />
+              <img src="https://images.unsplash.com/photo-1581092162562-40038f41dd12?w=400&h=300&fit=crop" alt="Proyek sondir 3" />
             </div>
             <div class="gallery-item">
-              <img src="https://via.placeholder.com/300x250?text=Proyek+4" alt="Proyek sondir 4" />
+              <img src="https://images.unsplash.com/photo-1581092335281-6fea7e0b2d4b?w=400&h=300&fit=crop" alt="Proyek sondir 4" />
             </div>
             <div class="gallery-item">
-              <img src="https://via.placeholder.com/300x250?text=Proyek+5" alt="Proyek sondir 5" />
+              <img src="https://images.unsplash.com/photo-1581092162566-40038f41de50?w=400&h=300&fit=crop" alt="Proyek sondir 5" />
             </div>
             <div class="gallery-item">
-              <img src="https://via.placeholder.com/300x250?text=Proyek+6" alt="Proyek sondir 6" />
+              <img src="https://images.unsplash.com/photo-1581092162574-40038f41dd20?w=400&h=300&fit=crop" alt="Proyek sondir 6" />
             </div>
           </div>
         </div>
