Fix: Update images dengan Picsum URLs yang lebih reliable dan konsisten

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?w=500&h=600&fit=crop" alt="Tim profesional sondir engineer" />
+            <img src="https://picsum.photos/480/520" alt="Tim profesional sondir engineer" />
           </div>
         </div>
       </section>
@@ -118,22 +118,22 @@
           <h2>Galeri Proyek</h2>
           <div class="gallery-grid">
             <div class="gallery-item">
-              <img src="https://images.unsplash.com/photo-1581092167562-40038f41dd12?w=400&h=300&fit=crop" alt="Proyek sondir 1" />
+              <img src="https://picsum.photos/400/300?random=1" alt="Proyek sondir 1" />
             </div>
             <div class="gallery-item">
-              <img src="https://images.unsplash.com/photo-1581092167562-40038f41dd20?w=400&h=300&fit=crop" alt="Proyek sondir 2" />
+              <img src="https://picsum.photos/400/300?random=2" alt="Proyek sondir 2" />
             </div>
             <div class="gallery-item">
-              <img src="https://images.unsplash.com/photo-1581092167562-40038f41dd30?w=400&h=300&fit=crop" alt="Proyek sondir 3" />
+              <img src="https://picsum.photos/400/300?random=3" alt="Proyek sondir 3" />
             </div>
             <div class="gallery-item">
-              <img src="https://images.unsplash.com/photo-1581092916692-8d71e884472f?w=400&h=300&fit=crop" alt="Proyek sondir 4" />
+              <img src="https://picsum.photos/400/300?random=4" alt="Proyek sondir 4" />
             </div>
             <div class="gallery-item">
-              <img src="https://images.unsplash.com/photo-1581092315261-8a49592902ab?w=400&h=300&fit=crop" alt="Proyek sondir 5" />
+              <img src="https://picsum.photos/400/300?random=5" alt="Proyek sondir 5" />
             </div>
             <div class="gallery-item">
-              <img src="https://images.unsplash.com/photo-1581092945648-7ac51b00e4c5?w=400&h=300&fit=crop" alt="Proyek sondir 6" />
+              <img src="https://picsum.photos/400/300?random=6" alt="Proyek sondir 6" />
             </div>
           </div>
         </div>
