Fix: Update project descriptions for clarity and consistency in the pricing section

--- a/index.html
+++ b/index.html
@@ -553,9 +553,8 @@
                     <div class="project-image">⚙️</div>
                     <div class="project-content">
                         <h3 class="project-title" data-en="Step 02 - How It Works" data-id="Step 02 - Cara Kerjanya">Step 02 - Cara Kerjanya</h3>
-                        <p class="project-description" data-en="You give draft access to our console, then the professional SS Studio team will upload your application carefully and follow all Google Play guidelines." data-id="Anda memberikan akses draft ke console kami, kemudian tim profesional SS Studio akan upload aplikasi Anda dengan hati-hati dan mengikuti semua guideline Google Play.">
-                            Anda memberikan akses draft ke console kami, kemudian tim profesional SS Studio 
-                            akan upload aplikasi Anda dengan hati-hati dan mengikuti semua guideline Google Play.
+                        <p class="project-description" data-en="We provide draft access to our console, our team will verify before submitting for review. The professional SS Studio team will upload your application carefully and follow all Google Play guidelines." data-id="Kami memberikan akses draft di console kami, tim akan melakukan verifikasi sebelum submit review. Tim profesional SS Studio akan upload aplikasi Anda dengan hati-hati dan mengikuti semua guideline Google Play.">
+                            Kami memberikan akses draft di console kami, tim akan melakukan verifikasi sebelum submit review. Tim profesional SS Studio akan upload aplikasi Anda dengan hati-hati dan mengikuti semua guideline Google Play.
                         </p>
                         <div class="project-tags">
                             <span class="tag" data-en="Draft Access" data-id="Akses Draft">Draft Access</span>
@@ -572,10 +571,10 @@
                     <div class="project-image">💰</div>
                     <div class="project-content">
                         <h3 class="project-title" data-en="Step 03 - Pricing Per App" data-id="Step 03 - Paket Harga Per App">Step 03 - Paket Harga Per App</h3>
-                        <p class="project-description" data-en="💰 $20 - Submit review💰 $20 - After app goes live💰 $40 - Weekly for each active app" data-id="💰 $20 - Submit review💰 $20 - Setelah app live💰 $40 - Mingguan untuk setiap app aktif">
-                            💰 $20 - Submit review<br>
-                            💰 $20 - Setelah app live<br>
-                            💰 $40 - Mingguan untuk setiap app aktif
+                        <p class="project-description" data-en="💰 $20 - Submit Review&lt;br&gt;💰 $20 - After App Goes Live&lt;br&gt;💰 $40 - Weekly for Each Active App" data-id="💰 $20 - Submit Review&lt;br&gt;💰 $20 - Setelah App Live&lt;br&gt;💰 $40 - Mingguan untuk Setiap App Aktif" style="line-height: 2;">
+                            💰 $20 - Submit Review<br>
+                            💰 $20 - Setelah App Live<br>
+                            💰 $40 - Mingguan untuk Setiap App Aktif
                         </p>
                         <div class="project-tags">
                             <span class="tag">Submit: $20</span>
